tests/cases/modules/ok/file-header-main.ari
mod cheader;

fn main() -> i64 {
  cheader::puts("header-ok");
  return 0;
}
