tests/cases/modules/errors/imported-semantic-error-main.ari
mod imported_semantic_error;

fn main() -> i64 {
  return 0;
}
